<resources>
    <string name="app_name" translatable="false">AR Drawing</string>
    <string name="this_action_contains_ads">This action contains ads</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="languages">Select \nLanguage</string>
    <string name="apply">Apply</string>
    <string name="please_select_language_first">Please select language first</string>
    <string name="home">Home</string>
    <string name="lesson">Lesson</string>
    <string name="template">Template</string>
    <string name="artwork">Artwork</string>
    <string name="ar_drawing">AR Drawing</string>
    <string name="trace_ndrawing">Trace\nDrawing</string>
    <string name="sketch_drawing">Sketch\nDrawing</string>
    <string name="trending">🔥Trending</string>
    <string name="cartoon">🐣Cartoon</string>
    <string name="all_template">All template</string>
    <string name="animal">🐷Animal</string>
    <string name="cute">😍Cute</string>
    <string name="lesson_step_by_step">Lesson step by step</string>
    <string name="see_all">See all</string>
    <string name="templates">Templates</string>
    <string name="Lesson">Lesson</string>
    <string name="lesson1">Lesson 1</string>
    <string name="lesson2">Lesson 2</string>
    <string name="lesson3">Lesson 3</string>
    <string name="step">Step:</string>
    <string name="artworks">Artwork</string>
    <string name="no_drawings_yet">No drawings yet!</string>
    <string name="start_drawing">Start Drawing</string>
    <string name="trace">Trace</string>
    <string name="sketch">Sketch</string>
    <string name="trace_drawing">Trace Drawing</string>
    <string name="secure_your_phone_using_a_tripod_a_glass_or_even_a_stack_of_books_to_keep_it_steady_while_you_draw">Secure your phone using a tripod, a glass, or even a stack of books to keep it steady while you draw.</string>
    <string name="i_got_it">I got it</string>
    <string name="place_a_sheet">Place a sheet of paper over the screen and simply trace the lines displayed to recreate the image effortlessly.</string>
    <string name="pick_a_template">Pick a Template</string>
    <string name="anime">🎏Anime</string>
    <string name="chibi">🍡Chibi</string>
    <string name="sport">️⛹️‍♂️Sport</string>
    <string name="level_1">Lesson 1</string>
    <string name="level_2">Lesson 2</string>
    <string name="level_3">Lesson 3</string>
    <string name="select_the_nmode_drawing">Select the\nmode drawing</string>
    <string name="continue_btn">Continue</string>
    <string name="sketch_drawing_n">Sketch Drawing</string>
    <string name="trace_drawing_n">Trace Drawing</string>
    <string name="finish">Finish</string>
    <string name="opacity">Opacity</string>
</resources>