<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <!-- Header Section -->
    <TextView
        android:id="@+id/app_title"
        style="@style/mHeading.P0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Lesson"
        android:textColor="@color/onPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/globe_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="Globe"
        android:src="@drawable/language"
        app:layout_constraintBottom_toBottomOf="@+id/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_title" />
    <HorizontalScrollView
        android:id="@+id/category_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:id="@+id/tab_cute"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_item_tab"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/lesson1"
                android:textColor="@color/onPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tab_animal"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/bg_item_tab"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/lesson2"
                android:textColor="@color/onPrimary"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tab_all"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_item_tab"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/lesson3"
                android:textColor="@color/onPrimary"
                android:textSize="14sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lesson_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/dp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_scroll"
        tools:listitem="@layout/fragment_lesson_item"
        />

</androidx.constraintlayout.widget.ConstraintLayout>