<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <!-- Header Section -->
    <TextView
        android:id="@+id/app_title"
        style="@style/mHeading.P0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ar_drawing"
        android:textColor="@color/onPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="Search"
        android:src="@drawable/how_to"
        app:layout_constraintBottom_toBottomOf="@+id/app_title"
        app:layout_constraintEnd_toStartOf="@+id/globe_icon"
        app:layout_constraintTop_toTopOf="@+id/app_title" />

    <ImageView
        android:id="@+id/globe_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="Globe"
        android:src="@drawable/language"
        app:layout_constraintBottom_toBottomOf="@+id/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_title" />

    <!-- Trace Drawing Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/trace_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/sketch_card"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/tertiary"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="160dp"
            android:layout_height="210dp"
            android:padding="@dimen/dp1"
            android:background="@drawable/card_background_purple"
            app:layout_constraintHorizontal_chainStyle="spread">

            <TextView
                android:id="@+id/trace_title"
                style="@style/mHeading.P0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/trace_ndrawing"
                android:textColor="@color/onTertiary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/trace_phone"
                android:layout_width="120dp"
                android:layout_height="135dp"
                android:background="@drawable/phone_background"
                android:contentDescription="Phone with drawing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/dp8"
                android:contentDescription="Arrow"
                android:src="@drawable/ic_arrow_up_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <!-- Sketch Drawing Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/sketch_card"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        android:layout_width="wrap_content"
        android:background="@drawable/card_background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trace_card"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="160dp"
            android:padding="@dimen/dp1"
            android:background="@drawable/card_background_white"
            android:layout_height="210dp">

            <TextView
                android:id="@+id/sketch_title"
                style="@style/mHeading.P0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sketch_drawing"
                android:textColor="@color/onTertiary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/sketch_phone"
                android:layout_width="120dp"
                android:layout_height="135dp"
                android:background="@drawable/phone_background_white"
                android:contentDescription="Phone with drawing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/dp8"
                android:contentDescription="Arrow"
                android:src="@drawable/ic_arrow_up_right_filled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Main Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trace_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <!-- Pick a Template Section -->
            <TextView
                android:id="@+id/template_title"
                style="@style/mHeading.P0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_template"
                android:textAlignment="center"
                android:textColor="@color/onPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Category Tabs -->
            <HorizontalScrollView
                android:id="@+id/category_scroll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/template_title">

                <LinearLayout
                    android:id="@+id/ctn_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">
                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/ctn_templates"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/dp16"
                android:orientation="vertical"
                android:layout_marginVertical="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/background_home_lesson"
                app:layout_constraintTop_toBottomOf="@+id/category_scroll">
                <!-- Templates Grid -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/templates_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="@dimen/dp32"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_template" />

                <TextView
                    android:id="@+id/see_more"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="See more"
                    android:textColor="@color/tertiaryContainer"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/templates_recycler" />
            </LinearLayout>

            <!-- Lesson Section -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lesson_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ctn_templates">

                <TextView
                    android:id="@+id/lesson_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson_step_by_step"
                    android:textColor="@color/onPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/see_all_lessons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="#4C4636"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_lessons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_lesson"
                    app:layout_constraintTop_toBottomOf="@id/see_all_lessons" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lesson_section"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>